# Cascade0

./: .gitattributes  .gitignore  README.md  decript.sh
data/atlas/: MNI152_1mm_ATLAS.labels
data/config/: T1_2_MNI152_1mm.conf
data/histograms/: brain_flair.hist  brain_pd.hist  brain_t1.hist  brain_t2.hist
data/report/: report_head.html  report_middle.html  report_tail.html
src/: CMakeLists.txt  buildinfo.h  cascade-main.cxx  chiTable.h  distancemap-main.cxx  inspectstate-main.cxx  itkCascadeUnaryFunctorImageFilter.h  itkCascadeUnaryFunctorImageFilter.hxx  itkMahalanobisDistanceImageFilter.h  itkMahalanobisDistanceImageFilter.hxx  itkMaskedStatisticsImageFilter.h  itkMaskedStatisticsImageFilter.hxx  itkProgressWatcher.h  likelihood-main.cxx  normalizer-main.cxx  outlier-main.cxx  property-filter-main.cxx  range-main.cxx  report-main.cxx  smoothing-main.cxx  statistics-filter-main.cxx  train-main.cxx  transform-main.cxx  util.cpp  util.h
src/execs/: cascade-main.cxx  grow-main.cxx  march-main.cxx  masklabeler-main.cxx  maxmask-main.cxx
src/pipeline/: itkImageNormalizerPipeline.h  itkImageNormalizerPipeline.hxx  itkIntensityNormalizerPipeline.h  itkIntensityNormalizerPipeline.hxx  itkN4Pipeline.h  itkN4Pipeline.hxx  itkPercentileFilterPipeline.h  itkPercentileFilterPipeline.hxx  itkRobustMeanVariancePipeline.h  itkRobustMeanVariancePipeline.hxx  itkRobustOutlierPipeline.h  itkRobustOutlierPipeline.hxx  itkSliceNormalizerPipeline.h  itkSliceNormalizerPipeline.hxx
src/scripts/: cascade-check.sh  cascade-csv-html.awk  cascade-histogram-match.sh  cascade-histogram.sh  cascade-html-report.sh  cascade-html.sh  cascade-hyp.sh  cascade-main.sh  cascade-overlay.sh  cascade-post.sh  cascade-pre.sh  cascade-pre1.sh  cascade-pre2.sh  cascade-report.sh  cascade-results-html.awk  cascade-setup.sh  cascade-std-normal.sh  cascade-std-register.sh  cascade-std-train.sh  cascade-tissue-type.sh  cascade-util.sh  cascade.sh  launch_cascade_pre.sh  launch_cascade_segment.sh  portability.sh  project_setting.sh  run_cascade.sh  run_cascade_html.sh  run_cascade_main.sh  run_cascade_post.sh  run_cascade_pre.sh  run_cascade_pre1.sh  run_cascade_pre2.sh  run_cascade_pre_histogram.sh  run_cascade_process.sh  run_cascade_report.sh  run_cascade_train.sh
src/tclap/: Arg.h  CmdLine.h  DocBookOutput.h  HelpVisitor.h  IgnoreRestVisitor.h  MultiArg.h  MultiSwitchArg.h  StdOutput.h  SwitchArg.h  UnlabeledMultiArg.h  UnlabeledValueArg.h  ValueArg.h  ValuesConstraint.h  VersionVisitor.h  XorHandler.h  ZshCompletionOutput.h
src/util/: helpers.h  itkCascadeUnaryFunctorImageFilter.hxx  itkChiSquaredFunctor.h  itkImageNonZeroToHistogramFilter.h  itkImageNonZeroToHistogramFilter.hxx  itkIntensityAlignFunctor.h  itkIntensityTableLookupFunctor.h  itkLinearTransformFunctor.h  itkMahalanobisDistanceImageFilter.h  itkMahalanobisDistanceImageFilter.hxx  itkMaskedRegionGrowingPipeline.h  itkMaskedRegionGrowingPipeline.hxx  itkOrientationEnhanceFilter.h  itkOrientationEnhanceFilter.hxx  itkStateInterpolatorFunction.h  itkStateInterpolatorFunction.hxx  itkTrainSingleNodeFilter.h  itkTrainSingleNodeFilter.hxx  itkWeightedSinglePassMeanCovarianceUpdate.h  itkWeightedSinglePassMeanCovarianceUpdate.hxx
